--- a/Template/[2] Image Quantization/Image Quantization Startup Code/[TEMPLATE] ImageQuantization/ImageQuantization/ImageQuantization.csproj
+++ b/Template/[2] Image Quantization/Image Quantization Startup Code/[TEMPLATE] ImageQuantization/ImageQuantization/ImageQuantization.csproj
@@ -10,7 +10,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ImageQuantization</RootNamespace>
     <AssemblyName>ImageQuantization</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
     <UpgradeBackupLocation>
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="hexaDecimalColor.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
