--- a/Template/[2] Image Quantization/Image Quantization Startup Code/[TEMPLATE] ImageQuantization/ImageQuantization/ImageQuantization.csproj
+++ b/Template/[2] Image Quantization/Image Quantization Startup Code/[TEMPLATE] ImageQuantization/ImageQuantization/ImageQuantization.csproj
@@ -48,6 +48,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClustersDetection.cs" />
+    <Compile Include="QuickSort.cs" />
     <Compile Include="hexaDecimalColor.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
