Image Quantization With Separate Class
Image Quantization With Separate Class

--- a/Template/[2] Image Quantization/Image Quantization Startup Code/[TEMPLATE] ImageQuantization/ImageQuantization/ImageQuantization.csproj
+++ b/Template/[2] Image Quantization/Image Quantization Startup Code/[TEMPLATE] ImageQuantization/ImageQuantization/ImageQuantization.csproj
@@ -56,6 +56,7 @@
   <ItemGroup>
     <Compile Include="Clustering.cs" />
     <Compile Include="ClustersDetection.cs" />
+    <Compile Include="ColorsConstruction.cs" />
     <Compile Include="MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
